# job-match-tune

./: .gitignore  README.md  gpt分析.md  gpt计划.md  pyproject.toml  requirements.txt  微调方案.md
configs/: baidu_keywords.txt  crawl.yaml  eval.yaml  label_schema.yaml  model.yaml  moka_sources.yaml  public_job_sources.yaml  public_job_sources_zh_large.yaml  tencent_keywords.txt  train_qlora.yaml  train_qwen3_14b_dpo.yaml  train_qwen3_14b_qlora.yaml
docs/: bytedance_api_research.md  data_pipeline_full.md  data_sources.md  experiment_results_2026-05-11.md  implementation_and_evolution.md  job_direction_policy.md  manual_eval_2026-05-13.md  modern_training_notes.md  optimization_against_open_source_2026-05-15.md  project_roadmap.md  project_structure.md  resume_pipeline.md  resume_project_highlights.md
examples/: jd_ai_app.txt  resume_ai_app.txt
frontend/: app.js  index.html  styles.css
scripts/: build_sft.sh  clean_jd.sh  crawl_jd.sh  crawl_tencent.sh  init_db.sh  run_modern_training_experiments.sh  run_three_gpu_experiments.sh  start_api.sh  start_frontend.sh  start_vllm_server.sh  train_direction_incremental.sh  train_qlora_smoke.sh  train_qwen3_14b_full.sh  train_qwen3_14b_smoke.sh
tests/: test_baidu_talent.py  test_build_multilingual_weak_sft_dataset.py  test_build_preference_dataset.py  test_build_resume_eval_dataset.py  test_build_resume_sft_dataset.py  test_build_sft_dataset.py  test_clean_text.py  test_deduplicate.py  test_eval_metrics.py  test_import_public_job_data.py  test_jd_careers.py  test_jd_field_rules.py  test_match_rule_engine.py  test_moka_careers.py  (+9 more)
(+83 files in other folders)
